--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "firebase": "^10.13.1",
     "gatsby": "^5.13.7",
     "gatsby-plugin-alias-imports": "^1.0.5",
+    "gatsby-plugin-google-fonts": "^1.0.1",
     "gatsby-plugin-image": "^3.13.1",
     "gatsby-plugin-manifest": "^5.13.1",
     "gatsby-plugin-postcss": "^6.13.1",
